EXTRA_DIST = f_case_48602x72_512p.nc \
             f_case_866x72_16p.nc \
             f_case_h0.txt \
             f_case_h1.txt \
             g_case_cmpaso_16p.nc \
             g_case_hist.txt \
             i_case_f19_g16_16p.nc \
             i_case_h0.txt \
             i_case_h1.txt \
             piodecomp16tasks16io01dims_ioid_514.dat \
             piodecomp16tasks16io01dims_ioid_516.dat \
             piodecomp16tasks16io02dims_ioid_548.dat

DISTCLEANFILES = f_case_866x72_16p.h5  \
                 f_case_866x72_16p.bp  \
                 f_case_866x72_16p.nc4 \
                 g_case_cmpaso_16p.h5  \
                 g_case_cmpaso_16p.bp  \
                 g_case_cmpaso_16p.nc4 \
                 i_case_f19_g16_16p.h5 \
                 i_case_f19_g16_16p.bp \
                 i_case_f19_g16_16p.nc4

