#
# Copyright (C) 2021, Northwestern University and Argonne National Laboratory
# See COPYRIGHT notice in top-level directory.
#
# @configure_input@

EXTRA_DIST = map_f_case_16p.nc map_f_case_16p.h5 map_f_case_16p.nc4 map_f_case_16p.bp \
             map_g_case_16p.nc map_g_case_16p.h5 map_g_case_16p.nc4 map_g_case_16p.bp \
             map_i_case_16p.nc map_i_case_16p.h5 map_i_case_16p.nc4 map_i_case_16p.bp \
             f_case_h0.txt   \
             f_case_h1.txt   \
             g_case_hist.txt \
             i_case_h0.txt   \
             i_case_h1.txt   \
             f_case_48602x72_512p.nc \
             piodecomp16tasks16io01dims_ioid_514.dat \
             piodecomp16tasks16io01dims_ioid_516.dat \
             piodecomp16tasks16io02dims_ioid_548.dat

